# hackathon

backend/: .env.example  LICENSE  pyproject.toml
backend/src/: config.py  main.py  view.py
backend/src/api/: __init__.py  chat.py  file_uploading.py  rag.py
backend/src/clients/: gemini_client.py  gemini_rag_client.py
backend/src/schemas/: book.py  chat_prompt.py  rag.py
backend/src/services/: book_service.py  chat_service.py  rag_service.py
backend/src/static/: style.css
backend/uploads/: eng_word  лекция ос 5.docx
backend/uploads/corpora/Положение Хакатона (1).docx/: Положение Хакатона (1).docx
backend/uploads/corpora/Реферат по Физике.docx/: Реферат по Физике.docx
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: api.js
frontend/src/components/: ChatWindow.jsx  FileUploader.jsx  MessageInput.jsx
src/: index.html  style.css
